[gd_scene load_steps=5 format=3 uid="uid://dj2or470kb04m"]

[ext_resource type="PackedScene" uid="uid://bjhu1hf616jtt" path="res://Characters/Enemy_Resources/Heavy_soldier/heavy_soldier_scene.gltf" id="1_e4un7"]
[ext_resource type="Script" path="res://Characters/Enemy_Scenes/heavy_soldier.gd" id="2_0nvcf"]

[sub_resource type="CylinderMesh" id="CylinderMesh_ow1p8"]
top_radius = 0.1
bottom_radius = 5.0
height = 15.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_k6xjm"]
points = PackedVector3Array(-5, -7.5, 0, -4.00157, -4.50029, -0.394479, -4.97651, -7.5, -0.490407, -4.97651, -7.5, 0.489429, -4.00157, -4.50029, 0.3935, -0.100822, 7.5, 0, -4.90407, -7.5, -0.97592, -1.07576, 4.49883, -0.106695, -0.0988646, 7.5, -0.019577, -2.02134, 1.49912, -0.40231, -4.90407, -7.5, 0.974941, -2.02134, 1.49912, 0.401331, -0.0988646, 7.5, 0.0185981, -1.07576, 4.49883, 0.105717, -0.0998435, 7.5, 0.00978851, -0.0998435, 7.5, -0.0107675, -4.78563, -7.5, -1.45164, -0.0929914, 7.5, -0.0391541, -4.78563, -7.5, 1.45067, -0.0929914, 7.5, 0.0381756, -4.6202, -7.5, -1.91366, -0.089076, 7.5, -0.0479641, -4.6202, -7.5, 1.91269, -0.089076, 7.5, 0.0469851, -4.40975, -7.5, -2.35709, -0.0714564, 7.5, -0.0714564, -1.5926, 1.49912, -1.30775, -2.52839, -1.50059, -1.68951, -4.15818, -7.5, -2.778, -4.40975, -7.5, 2.35611, -1.5926, 1.49912, 1.30677, -0.0714564, 7.5, 0.0704775, -4.15818, -7.5, 2.77702, -2.52839, -1.50059, 1.68853, -0.0479641, 7.5, -0.089076, -1.30775, 1.49912, -1.5926, -3.17247, -7.5, -3.86551, -2.15055, -1.50059, -2.15055, -3.86551, -7.5, -3.17247, -3.86551, -7.5, 3.1715, -1.30775, 1.49912, 1.59162, -0.0479641, 7.5, 0.0880971, -2.15055, -1.50059, 2.14957, -3.17247, -7.5, 3.86453, -0.0391541, 7.5, -0.0929914, -1.91366, -7.5, -4.6202, -2.35709, -7.5, -4.40975, -2.778, -7.5, -4.15818, -1.68951, -1.50059, -2.52839, -3.53563, -7.5, -3.53563, -3.53563, -7.5, 3.53465, -1.68951, -1.50059, 2.52741, -0.0391541, 7.5, 0.0920124, -2.778, -7.5, 4.1572, -2.35709, -7.5, 4.40877, -1.91366, -7.5, 4.61922, -0.019577, 7.5, -0.0988646, -1.45164, -7.5, -4.78563, -0.019577, 7.5, 0.0978856, -1.45164, -7.5, 4.78465, -0.0107675, 7.5, -0.0998435, -0.106695, 4.49883, -1.07576, -0.394479, -4.50029, -4.00157, -0.40231, 1.49912, -2.02134, -0.97592, -7.5, -4.90407, -0.40231, 1.49912, 2.02036, -0.394479, -4.50029, 4.00059, -0.106695, 4.49883, 1.07478, -0.0107675, 7.5, 0.0988646, -0.97592, -7.5, 4.90309, 0, 7.5, -0.100822, 0, -7.5, -5, -0.490407, -7.5, -4.97651, -0.490407, -7.5, 4.97553, 0, -7.5, 5, 0, 7.5, 0.0998435, 0.00978851, 7.5, -0.0998435, 0.105717, 4.49883, -1.07576, 0.3935, -4.50029, -4.00157, 0.489429, -7.5, -4.97651, 0.489429, -7.5, 4.97553, 0.3935, -4.50029, 4.00059, 0.105717, 4.49883, 1.07478, 0.00978851, 7.5, 0.0988646, 0.0185981, 7.5, -0.0988646, 0.974941, -7.5, -4.90407, 0.401331, 1.49912, -2.02134, 0.974941, -7.5, 4.90309, 0.401331, 1.49912, 2.02036, 0.0185981, 7.5, 0.0978856, 0.0381756, 7.5, -0.0929914, 1.45067, -7.5, -4.78563, 1.45067, -7.5, 4.78465, 0.0381756, 7.5, 0.0920124, 0.0469851, 7.5, -0.089076, 1.91269, -7.5, -4.6202, 1.91269, -7.5, 4.61922, 0.0469851, 7.5, 0.0880971, 0.0704775, 7.5, -0.0714564, 1.30677, 1.49912, -1.5926, 1.68853, -1.50059, -2.52839, 2.77702, -7.5, -4.15818, 2.35611, -7.5, -4.40975, 2.35611, -7.5, 4.40877, 1.30677, 1.49912, 1.59162, 0.0704775, 7.5, 0.0704775, 2.77702, -7.5, 4.1572, 1.68853, -1.50059, 2.52741, 0.0880971, 7.5, -0.0479641, 1.59162, 1.49912, -1.30775, 3.86453, -7.5, -3.17247, 2.14957, -1.50059, -2.15055, 3.1715, -7.5, -3.86551, 3.1715, -7.5, 3.86453, 1.59162, 1.49912, 1.30677, 0.0880971, 7.5, 0.0469851, 2.14957, -1.50059, 2.14957, 3.86453, -7.5, 3.1715, 0.0920124, 7.5, -0.0391541, 4.61922, -7.5, -1.91366, 4.40877, -7.5, -2.35709, 4.1572, -7.5, -2.778, 2.52741, -1.50059, -1.68951, 3.53465, -7.5, -3.53563, 3.53465, -7.5, 3.53465, 2.52741, -1.50059, 1.68853, 0.0920124, 7.5, 0.0381756, 4.1572, -7.5, 2.77702, 4.40877, -7.5, 2.35611, 4.61922, -7.5, 1.91269, 0.0978856, 7.5, -0.019577, 4.78465, -7.5, -1.45164, 0.0978856, 7.5, 0.0185981, 4.78465, -7.5, 1.45067, 0.0988646, 7.5, -0.0107675, 1.07478, 4.49883, -0.106695, 4.00059, -4.50029, -0.394479, 2.02036, 1.49912, -0.40231, 4.90309, -7.5, -0.97592, 2.02036, 1.49912, 0.401331, 4.00059, -4.50029, 0.3935, 1.07478, 4.49883, 0.105717, 0.0988646, 7.5, 0.00978851, 4.90309, -7.5, 0.974941, 0.0998435, 7.5, 0, 5, -7.5, 0, 4.97553, -7.5, -0.490407, 4.97553, -7.5, 0.489429)

[node name="Heavy_Soldier" instance=ExtResource("1_e4un7")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
script = ExtResource("2_0nvcf")

[node name="Skeleton3D" parent="Sketchfab_model/Root/base soldier1" index="0"]
bones/2/rotation = Quaternion(0, 0.720992, -0.692943, 0)
bones/2/scale = Vector3(1, 0.999997, 0.999997)
bones/3/rotation = Quaternion(0.0396645, -0.0789677, -0.0147668, 0.995978)
bones/3/scale = Vector3(0.999999, 1, 0.999996)
bones/4/rotation = Quaternion(0.0351043, 0.0165251, -0.00465854, 0.999236)
bones/4/scale = Vector3(0.999998, 0.999997, 1)
bones/5/rotation = Quaternion(0.0282207, 0.755551, -0.653703, 0.031921)
bones/5/scale = Vector3(1, 1, 0.999995)
bones/6/rotation = Quaternion(0.0435047, 0.0177989, 0.0136663, 0.998801)
bones/6/scale = Vector3(0.999994, 0.999998, 1)
bones/7/rotation = Quaternion(0.0352689, 0.0155591, 0.00319235, 0.999252)
bones/10/rotation = Quaternion(0.207266, 0, 0, 0.978285)
bones/11/rotation = Quaternion(0.0980802, 0.0444534, -0.000704128, 0.994185)
bones/13/rotation = Quaternion(-0.764745, 0, 0, 0.644333)
bones/13/scale = Vector3(1, 0.999999, 0.999999)
bones/15/rotation = Quaternion(-0.764745, 0, 0, 0.644333)
bones/15/scale = Vector3(1, 0.999999, 0.999999)
bones/17/rotation = Quaternion(-0.764745, 0, 0, 0.644333)
bones/17/scale = Vector3(1, 0.999999, 0.999999)
bones/20/rotation = Quaternion(-0.764745, 0, 0, 0.644333)
bones/20/scale = Vector3(1, 0.999999, 0.999999)
bones/22/rotation = Quaternion(-0.383486, -0.210819, 0.765787, -0.471237)
bones/23/rotation = Quaternion(0.0745405, 0.878359, 0.32125, -0.346018)
bones/23/scale = Vector3(1, 0.999994, 0.999997)
bones/24/rotation = Quaternion(-0.326807, -0.148613, -0.565083, 0.742828)
bones/25/rotation = Quaternion(-0.0991983, -0.370381, -0.248482, 0.889514)
bones/25/scale = Vector3(1.00001, 0.999995, 1)
bones/26/rotation = Quaternion(0.164355, 0.318576, -0.614911, 0.702411)
bones/27/rotation = Quaternion(-0.285978, -0.139974, 0.0741277, 0.945055)
bones/27/scale = Vector3(0.999994, 0.999996, 1)
bones/28/rotation = Quaternion(-0.358714, -0.123249, 0.105144, 0.919282)
bones/28/scale = Vector3(1.00001, 1, 0.999996)
bones/29/rotation = Quaternion(0.174166, 0.0186017, -0.234366, 0.956239)
bones/29/scale = Vector3(0.999995, 1, 1)
bones/30/rotation = Quaternion(-0.393779, 0.0923822, -0.0310689, 0.914023)
bones/30/scale = Vector3(0.999999, 1, 1.00001)
bones/32/rotation = Quaternion(-0.249126, 0.0279781, -0.10986, 0.961813)
bones/32/scale = Vector3(1, 0.999995, 1.00001)
bones/33/rotation = Quaternion(0.120102, -0.038525, -0.0374377, 0.991307)
bones/33/scale = Vector3(1, 1, 0.999996)
bones/34/rotation = Quaternion(-0.417539, 0.130019, -0.14755, 0.887122)
bones/34/scale = Vector3(1.00001, 0.999994, 0.999999)
bones/35/rotation = Quaternion(-0.252865, -0.0586175, -0.149862, 0.954026)
bones/35/scale = Vector3(0.999996, 0.999999, 1.00001)
bones/36/rotation = Quaternion(-0.31393, 0.0633138, -0.159337, 0.933837)
bones/37/rotation = Quaternion(0.080469, -0.125757, 0.0919084, 0.984511)
bones/38/rotation = Quaternion(-0.413362, 0.261155, -0.163727, 0.85681)
bones/39/rotation = Quaternion(-0.244214, 0.00226815, -0.127282, 0.961329)
bones/39/scale = Vector3(1, 1.00001, 0.999999)
bones/40/rotation = Quaternion(-0.300942, 0.109658, -0.144634, 0.93621)
bones/40/scale = Vector3(0.999994, 1, 1)
bones/41/rotation = Quaternion(0.018618, -0.35048, 0.202661, 0.914191)
bones/42/rotation = Quaternion(-0.258232, 0.560308, -0.073897, 0.783524)
bones/43/rotation = Quaternion(-0.301213, 0.0285616, -0.198731, 0.932181)
bones/43/scale = Vector3(1, 0.999995, 1)
bones/44/rotation = Quaternion(-0.297904, 0.192105, -0.11689, 0.927731)
bones/44/scale = Vector3(0.999994, 1, 1)
bones/45/rotation = Quaternion(-0.282881, 0.167434, 0.77523, 0.53941)
bones/45/scale = Vector3(1.00001, 0.999996, 1)
bones/46/rotation = Quaternion(0.263343, -0.8103, 0.125601, 0.508222)
bones/46/scale = Vector3(1.00001, 0.999998, 0.999997)
bones/47/rotation = Quaternion(0.607636, 0.246542, -0.344202, 0.671953)
bones/48/rotation = Quaternion(0.0949802, 0.373129, 0.361707, 0.849071)
bones/48/scale = Vector3(1.00001, 0.999996, 1.00001)
bones/49/rotation = Quaternion(0.541877, -0.0661345, 0.290301, 0.785952)
bones/50/rotation = Quaternion(-0.367556, -0.353082, 0.0561502, 0.858535)
bones/51/rotation = Quaternion(-0.228074, 0.0501934, 0.0179465, 0.972184)
bones/52/rotation = Quaternion(0.284067, 0.33554, 0.0675732, 0.89563)
bones/53/rotation = Quaternion(-0.0864735, -0.14616, -0.130435, 0.976804)
bones/54/rotation = Quaternion(-0.0253946, -0.167365, 0.0790782, 0.98239)
bones/55/rotation = Quaternion(0.00461189, -0.091316, 0.0324856, 0.995281)
bones/55/scale = Vector3(0.999996, 1.00001, 0.999999)
bones/56/rotation = Quaternion(0.0923935, 0.0662403, -0.0853721, 0.989842)
bones/56/scale = Vector3(1, 1, 0.999999)
bones/57/rotation = Quaternion(-0.12639, -0.0383689, 0.448855, 0.883789)
bones/57/scale = Vector3(0.999993, 1, 1)
bones/58/rotation = Quaternion(0.0505289, -0.0407092, 0.635022, 0.769764)
bones/58/scale = Vector3(0.999997, 1, 1)
bones/59/rotation = Quaternion(0.115439, 0.105108, 0.476323, 0.865299)
bones/59/scale = Vector3(1, 1.00001, 0.999996)
bones/60/rotation = Quaternion(-0.0962544, -0.40786, -0.0752165, 0.904836)
bones/60/scale = Vector3(0.999993, 1.00001, 0.999996)
bones/61/rotation = Quaternion(0.337919, 0.166102, 0.363876, 0.851948)
bones/61/scale = Vector3(1.00001, 1, 0.999998)
bones/62/rotation = Quaternion(0.254016, 0.0480111, 0.59534, 0.76075)
bones/62/scale = Vector3(0.999996, 1, 0.999999)
bones/63/rotation = Quaternion(0.259519, -0.0168573, 0.412129, 0.873221)
bones/64/rotation = Quaternion(-0.143589, -0.827968, 0.144221, 0.522543)
bones/64/scale = Vector3(1, 0.999993, 1.00001)
bones/65/rotation = Quaternion(0.410165, 0.49497, -0.128729, 0.755115)
bones/66/rotation = Quaternion(0.505546, -0.122606, 0.361149, 0.773927)
bones/66/scale = Vector3(1, 0.999996, 1)
bones/67/rotation = Quaternion(0.447242, -0.0573209, 0.130113, 0.88304)
bones/68/rotation = Quaternion(0.0318596, -0.0505003, -0.0153603, 0.998098)

[node name="n e h 2_0" parent="Sketchfab_model/Root/base soldier1/Skeleton3D" index="0"]
transform = Transform3D(0.996052, -0.0878131, -0.0134022, 0.0866348, 0.993643, -0.071866, 0.0196279, 0.0704185, 0.997326, -0.0021652, -0.289571, 0.63374)

[node name="pol filter_0" parent="Sketchfab_model/Root/base soldier1/Skeleton3D" index="1"]
transform = Transform3D(0.996052, -0.0878131, -0.0134022, 0.0866348, 0.993643, -0.071866, 0.0196279, 0.0704185, 0.997326, 0.00379948, -0.330602, 0.51216)

[node name="pol gas mask_0" parent="Sketchfab_model/Root/base soldier1/Skeleton3D" index="2"]
transform = Transform3D(0.996052, -0.0878131, -0.0134022, 0.0866348, 0.993643, -0.071866, 0.0196279, 0.0704185, 0.997326, 0.00379948, -0.330602, 0.51216)

[node name="pol gas mask_1" parent="Sketchfab_model/Root/base soldier1/Skeleton3D" index="3"]
transform = Transform3D(0.996052, -0.0878131, -0.0134022, 0.0866348, 0.993643, -0.071866, 0.0196279, 0.0704185, 0.997326, 0.00379948, -0.330602, 0.51216)

[node name="pol helmet_0" parent="Sketchfab_model/Root/base soldier1/Skeleton3D" index="4"]
transform = Transform3D(0.996052, -0.0878131, -0.0134022, 0.0866348, 0.993643, -0.071866, 0.0196279, 0.0704185, 0.997326, 0.00104421, -0.315537, 0.585485)

[node name="WZ96 Beryl_0" parent="Sketchfab_model/Root/base soldier1/Skeleton3D" index="5"]
transform = Transform3D(-0.187219, 0.942662, 0.276276, -0.979546, -0.157965, -0.12484, -0.0740505, -0.293991, 0.952947, -0.00223728, -0.610582, 0.0113667)

[node name="Field_of_view" type="Area3D" parent="." index="1"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Field_of_view" index="0"]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, -0.000242949, 1.7118, 7.67273)
visible = false
mesh = SubResource("CylinderMesh_ow1p8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Field_of_view" index="1"]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, -0.000242949, 1.7118, 7.67273)
shape = SubResource("ConvexPolygonShape3D_k6xjm")

[node name="Vision_Timer" type="Timer" parent="." index="2"]
wait_time = 0.25

[node name="Vision_RayCast" type="RayCast3D" parent="." index="3"]
target_position = Vector3(0, -15, 0)
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 1

[connection signal="timeout" from="Vision_Timer" to="." method="_on_vision_timer_timeout"]
